# tgfuse

./: .gitignore  pyproject.toml  readme.md
tgfuse/: __main__.py
tgfuse/config/: config.py  logging_config.py
tgfuse/core/: ftp.py  func.py  fuse.py  history.py  tg.py
tgfuse/funcs/: channel.py  docs.py
